--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 /* =============================== */
 /* Colors */
 /* =============================== */
-:root{
+:root {
     --dragon_blue: #005288;
-    --dragon_silver: #A7A9AC;
+    --dragon_silver: #a7a9ac;
 }
 /* =============================== */
 /* Reset */
@@ -50,15 +50,14 @@ body {
     color: #f0f0f0;
     background-color: #0e0e0e;
     background-image: url(/assets/hd-wallpaper-g28e11b3dc_1920.jpg);
-
 }
 /* =============================== */
 /* Wrapper */
 /* =============================== */
-.main-wrapper{
+.main-wrapper {
     background-color: #0e0e0ecd;
     min-height: 100%;
-    width: 100%;   
+    width: 100%;
 }
 .wrapper {
     display: flex;
@@ -84,7 +83,6 @@ body {
         max-width: none;
     }
 }
-
 /* =============================== */
 /* Loading */
 /* =============================== */
@@ -159,10 +157,10 @@ body {
     line-height: 1.375;
     text-align: center;
 }
-.logo-text{
+.logo-text {
     display: none;
 }
-.logo-img{
+.logo-img {
     width: 230px;
     margin-left: -40px;
     text-align: center;
@@ -170,18 +168,16 @@ body {
 @media (max-width: 767.98px) {
     .title {
         font-size: 30px;
-
     }
 }
 @media (max-width: 1199.98px) {
     .logo-text {
         display: block;
     }
-    .logo-img{
+    .logo-img {
         display: none;
     }
 }
-
 /* =============================== */
 /* Main container */
 /* =============================== */
@@ -225,7 +221,7 @@ body {
     flex-wrap: wrap;
 }
 .about {
-    text-align:justify;
+    text-align: justify;
     font-size: 14px;
     line-height: 1.25;
 }
@@ -239,7 +235,6 @@ body {
     padding-top: 25px;
     padding-bottom: 20px;
 }
-
 .item_header {
     text-align: center;
     text-transform: uppercase;
@@ -278,20 +273,19 @@ body {
 .wiki_link_container:hover {
     background-color: var(--dragon_silver);
 }
-
 @media (max-width: 767.98px) {
     .info_container_items {
         grid-template-columns: repeat(2, minmax(auto, 300px));
         column-gap: 20px;
         row-gap: 15px;
     }
-    .info_container{
+    .info_container {
         margin-right: 0;
     }
-    .about{
+    .about {
         text-align: justify;
     }
-    .wiki_link_container{
+    .wiki_link_container {
         height: 40px;
         margin-top: 30px;
     }
@@ -309,12 +303,12 @@ body {
     width: 100%;
 }
 .swiper-wrapper {
-  text-align: center;
-} 
+    text-align: center;
+}
 .swiper {
     width: 600px;
     height: 600px;
-  }
+}
 .swiper-slide {
     text-align: center;
     font-size: 18px;
@@ -345,13 +339,12 @@ body {
     padding: 25px;
     color: var(--dragon_blue);
 }
-
 .swiper-button-prev:hover,
 .swiper-button-next:hover {
     background-color: white;
 }
 @media (max-width: 1199.98px) {
-    .swiper{
+    .swiper {
         width: 450px;
         height: 450px;
     }
@@ -360,7 +353,7 @@ body {
     }
 }
 @media (max-width: 767.98px) {
-    .swiper{
+    .swiper {
         width: 300px;
         height: 300px;
     }
@@ -369,12 +362,12 @@ body {
         width: auto;
     }
     .swiper-button-prev,
-    .swiper-button-next{
+    .swiper-button-next {
         background: none;
         padding: 0;
     }
     .swiper-button-prev:hover,
     .swiper-button-next:hover {
-    background-color: none;
-}
+        background-color: none;
+    }
 }
